--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1"
   }
 }
