--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
     "@iconify/react": "^4.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1"
